// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders children correctly 1`] = `
<form
  className="talixo-form"
>
  <div>
    Test children
  </div>
</form>
`;

exports[`<Form /> should render footer componet correctly 1`] = `
<form
  className="talixo-form"
  footerComponent={
    <div>
      Footer
    </div>
  }
>
  <div>
    Test children
  </div>
</form>
`;
